syntax = "proto3";

option go_package = "v1";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

package v1;

message Scanner {
    string name                 = 1;
    string type                 = 2;
    string endpoint             = 3;
    string remote               = 4;
    map<string, string> config  = 5;
    // If a list of clusters is provided, the integration will only be accessed from the specified clusters' agents.
    repeated string clusters    = 6;
}

message GetScannersRequest {
    string name    = 1;
    string cluster = 2;
}

message GetScannersResponse {
    repeated Scanner scanners = 1;
}

service ScannerService {

    rpc GetScanners(GetScannersRequest) returns (GetScannersResponse) {
        option (google.api.http) = {
            get: "/v1/scanners"
        };
    }

    rpc PostScanner(Scanner) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/v1/scanners"
            body: "*"
        };
    }

    rpc PutScanner(Scanner) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            put: "/v1/scanners/{name}"
            body: "*"
        };
    }

}
